Adicionado Forma de Pagamento no PIX

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="box-produto">
       <h2>PC Gamer</h2>
       <p class="descricao-produto">Para jogar Skyrim</p>
-      <p>R$ 15.000,00</p>
+      <p>R$ 15.000,00 ou R$ 14.000,00 no PIX</p>
     </div>
   </body>
 </html>
